# madore

./: Cargo.toml  README.md  install.sh
.github/workflows/: release.yml
assets/: app.css  app.js  index.html
src/: assets.rs  daemon.rs  fsutil.rs  main.rs  render.rs  routes.rs  server.rs  tree.rs  watcher.rs
