[package]
name = "madore"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.103"
axum = "0.8.9"
clap = { version = "4.6.1", features = ["derive"] }
comrak = "0.53.0"
mime_guess = "2.0.5"
notify-debouncer-full = "0.7.0"
rust-embed = "8.11.0"
serde = { version = "1.0.228", features = ["derive"] }
tokio = { version = "1.52.3", features = ["rt-multi-thread", "macros", "fs", "sync", "net", "signal", "time"] }
tokio-stream = { version = "0.1.18", features = ["sync"] }
webbrowser = "1.2.1"

[target.'cfg(unix)'.dependencies]
libc = "0.2"

[profile.release]
lto = true
strip = true
codegen-units = 1
